# OpenCycleTrainer

./: .gitignore  AGENTS.md  AppSpec.md  CLAUDE.md  CODEX_TASKS.md  LOGGING_PLAN.md  README.md  TODOs.md  pyproject.toml  test_results.txt
.claude/: settings.local.json
.claude/agents/: codebase-explorer.md  pdf-reader.md  test-runner.md
.nicegui/: storage-user-4d8a67ad-59b3-4ff6-9bcf-057166aeb134.json
.tmp_runtime/fit_exporter_tests/: Threshold_20260310_1842.fit
.tmp_runtime/recorder_tests/: FIT_Fail_Test_20260310_2200.json  FIT_Fail_Test_20260310_2200.samples.jsonl  Pause_Resume_20260310_2000.fit  Pause_Resume_20260310_2000.json  Pause_Resume_20260310_2000.samples.jsonl
Docs/: ArchitectureDiagram.md  OpenCycleTrainer_AppSpec.odt  charts_implementation_spec.md  hotkeys_manual_checklist.md  library_preview_and_category_plan.md  nicegui-ui-refactor-plan.md  workout_controller_decomposition.md
Docs/Errors/: fit_write.error
flatpak/: README.md  org.opencycletrainer.OpenCycleTrainer.desktop  org.opencycletrainer.OpenCycleTrainer.yaml  python-modules.json  requirements-linux.txt  requirements.txt
opencycletrainer/: __init__.py  app.py  logging_config.py  singletons.py  state.py
scripts/: build_windows_msi.ps1
workouts/: KM_Baseline_FTP_Test.mrc  LT1_72_45m.mrc  SST_90_2x20.mrc  SST_90_2x25.mrc  SST_90_3x15.mrc  SST_90_4x8.mrc  Tempo 1x15.mrc  Tempo_1x15.mrc  Test Ride.mrc  VO2_2x3_120-120.mrc  VO2_3x12_30-30.mrc  VO2_3x6_60-60.mrc  Z2_65_30m.mrc  Z2_65_60m.mrc  Z3_85_1x30.mrc  Z3_85_2x20.mrc  Z4_95_2x20.mrc  Z4_95_3x10.mrc  Z4_95_4x10.mrc  workouts_lib.md
(+169 files in other folders)
